<resources>
    <string name="app_name">Shopping wish List</string>
    <string name="category_icon">Category Icon</string>
    <string name="category_title">Category Title\n</string>
    <string name="nextButton">Next</string>
    <string name="wish_3_image">Wish 3 Image</string>
    <string name="wish_2_image">Wish 2 image</string>
    <string name="wish_1_image">Wish 1 image</string>
    <string name="populateRecView">Populate</string>
    <string name="clear">Clear</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview1">TextView</string>
    <string name="welcome_string">Welcome to Shopping Wish List. Please sign in or create a new account</string>
    <string name="user_name">User Name:</string>
    <string name="user_name_hint">Please enter your email address</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="wishListName">Wish List</string>
    <string name="shopName">Shop</string>
    <string name="login">Login</string>
    <string name="createNew">Create</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="firstName">First Name:</string>
    <string name="store_information">Wishes Location on Google Map</string>
    <string name="category1">Category 1</string>
    <string name="cartText">Add to Cart</string>
    <string name="productName">Product Name</string>
    <string name="productPrice">Product Price</string>
    <string name="plane_finding">Finding AR Plane</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="merchandise_description">Description of Merchandise</string>
    <string name="purchase">Purchase</string>
    <string name="Checkout">Checkout Activity</string>
    <string name="productInstructions">Enter a product to search for</string>
    <string name="AutoLocateInstructions">Use the switch to allow auto detection of location.\nSetting switch to on would allow the map to autolocate your position.\nSetting switch to off would allow you to manually set your location, in case if autodetect shows wrong location</string>
    <string name="AutoDetectLocationSwitchText">Auto Detect</string>
    <string name="Address">Address:</string>
    <string name="Submit">Submit</string>
    <string name="AddressHint">Please place your address here</string>
    <string name="City_content_description">This is the city you live in that would help locating on map</string>
    <string name="CityContentDescription">This is the name of the city in which you live.  It will be used to determine your location on map</string>
    <string name="StateContentDescription">This is the state in which you live in.  It will be used to locate you on map</string>
    <string name="ZipHint">This is where your zip code goes to and is used to locate you on the map</string>
    <string name="City">City:</string>
    <string name="State">State:</string>
    <string name="ZipCode">Zip Code:</string>
    <string name="UserName">User Name:</string>
    <string name="Password">Password:</string>
    <string name="lastName">Last Name:</string>
    <string name="phone">Phone:</string>
    <string name="Email">email:</string>
</resources>