<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CreateNewUserRegistration">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="408dp"
        android:layout_height="637dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling">

        <LinearLayout
            android:id="@+id/labels"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:text="@string/firstName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/firstNameLabelText"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="First Name"
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/firstNameLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="0dp"
                android:text="@string/lastName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/lastNameLabelText"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="Last Name"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="0dp"
                android:text="@string/Address"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/addressLabelText"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="homeAddress"
                android:ems="10"
                android:hint="@string/AddressHint"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:text="@string/City"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/cityLabelText"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="City"
                android:ems="10"
                android:hint="@string/CityContentDescription"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="20dp"
                android:text="@string/State"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/stateLabelText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="State"
                android:ems="10"
                android:hint="@string/StateContentDescription"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/zipLabel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/ZipCode"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/zipLabelText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="Zip Code"
                android:ems="10"
                android:hint="@string/ZipHint"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="0dp"
                android:text="@string/phone"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/phoneLabelText"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/UserName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/userNameLabelText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="User Name"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/Password"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/passwordLabelText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="Pass Word"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/Email"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/emailLabelText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"
                android:autofillHints="Email"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="296dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="37dp"
                android:text="@string/Submit" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>