<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutParent">


    <TextView
        android:id="@+id/autoDetectLocation"
        android:layout_width="183dp"
        android:layout_height="96dp"
        android:layout_marginEnd="353dp"
        android:layout_marginBottom="143dp"
        android:text="@string/AutoLocateInstructions"
        app:layout_constraintBottom_toTopOf="@+id/mapFCV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Switch
        android:id="@+id/autoDetectSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AutoDetectLocationSwitchText"
        app:layout_constraintBottom_toBottomOf="@id/autoDetectLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/autoDetectLocation"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/purchaseItems"
        android:layout_width="415dp"
        android:layout_height="99dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchasesRV">


        <TextView
            android:id="@+id/productTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/productInstructions" />

        <TextView
            android:id="@+id/cartBadge"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end|top"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/badge_background"
            android:gravity="center"
            android:padding="3dp"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cartText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/productTV"
            app:layout_constraintEnd_toStartOf="@id/purchaseButton"/>

        <Button
            android:id="@+id/purchaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/purchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addToCart"
            />


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFCV"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        app:layout_constraintBottom_toTopOf="@id/purchasesRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchaseItems"
        tools:context="com.tritongames.shoppingwishlist.presentation.Shop">


    </androidx.fragment.app.FragmentContainerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/purchasesRV"
        android:layout_width="413dp"
        android:layout_height="240dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapFCV"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>


